--- a/app/index.html
+++ b/app/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <select name="" id="pillbox" multiple="multiple">
+    <select multiple="multiple" name="" id="pillbox">
         <optgroup label="Classes">
             <option value="warrior">Warrior</option>
             <option value="mage">Mage</option>
